# Qt6_learning

./: CMakeLists.txt  EnumTypes.h  Main.qml  ModuleElement.qml  main.cpp
CustomModules/MyModule/: CMakeLists.txt  ModuleClass.cpp  ModuleClass.h  ModuleMain.cpp  ModuleMain.h
GUI/: CMakeLists.txt  Main.qml  main.cpp
